--- a/index.html
+++ b/index.html
@@ -31,6 +31,9 @@
                         <a class="nav-link" href="#projects">Projetos</a>
                     </li>
                     <li class="nav-item">
+                        <a class="nav-link" href="#">Sobre o FlutterFlow</a>
+                    </li>
+                    <li class="nav-item">
                         <a class="nav-link" href="#contact">Contato</a>
                     </li>
                 </ul>
